# dastardcommander

./: .gitignore  README.md  dc.py  dc.ui  demo_client.py  host_port.ui  observe.py  observe.ui  projectors.py  pyproject.toml  roxterms.sh  rpc_client.py  ruff.toml  setup.py  status_monitor.py  trigger_config.py  trigger_config.ui  trigger_monitor.py  triggerconfig.ui  workflow.py  workflow.ui  writing.py  writing.ui  zmq_sub_client.py
SubscribeTester/: Makefile  zhelpers.hpp  zmq_sub_client.cpp
dastard_commander/: __init__.py  __main__.py  dc.py  observe.py  trigger_config.py  workflow.py  writing.py
dastard_commander/ui/: host_port.ui
dastardcommander/: __init__.py  __main__.py  configure_level_triggers.py  dc.py  disable_hyperactive.py  easy_client_dastard.py  observe.py  projectors.py  rpc_client.py  rpc_client_for_easy_client.py  special_channels.py  status_monitor.py  trigger_blocker.py  trigger_config.py  trigger_config_simple.py  workflow.py  writing.py  zmq_sub_client.py  zmq_sub_client_print_raw_bytes.py
dastardcommander/demo/scrollbar/: README.md  demo.py  demo.ui
dastardcommander/ui/: dc.ui  disable_hyperactive_dialog.ui  host_port.ui  level_trigger_config.ui  observe.ui  trigger_config.ui  trigger_config_simple.ui  workflow.ui  writing.ui
examples/: set_up_group_trigger.py
examples/SubscribeTester/: .gitignore  Makefile  sub_client.c
